<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FluxApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="waiting">Waiting</string>
    <string name="stopheating">Stop Heating</string>
    <string name="startheating">Start Heating</string>
    <string name="BTon">On</string>
    <string name="BToff">Off</string>

</resources>
